# chess-weakness-analyzer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/cwa/: __init__.py  analyzer.py  app_streamlit.py  cli.py  config.py  utils.py
src/cwa/data/: ingest_chesscom.py  pgn_parser.py  storage.py
src/cwa/engine/: stockfish.py
src/cwa/features/: aggregate.py  eco_custom_seqs.txt  eco_map.json  eco_map.json.bak  errors.py  evaluations.py  openings.py  phases.py  time_management.py
tests/: test_evaluations.py  test_openings.py  test_phases.py
tests/data/: sample_small.pgn
